# sorta-simple-fastapi-template

./: .gitignore  README.md  codecov.yml  docker-compose.prod.yml  docker-compose.prod_TEMPLATE.yml  docker-compose.yml
.github/workflows/: codeql.yml
project/: .coverage  .coveragerc  Dockerfile  Dockerfile.prod  aerich.ini  codecov.yml  pyproject.toml  setup.cfg
project/app/: config.py  core.py  db.py  main.py
project/app/api/: auth.py  crud.py  users.py
project/app/crud/: users.py
project/app/models/: pydantic.py  tortoise.py  user.py
project/app/schemas/: user.py
project/coverage_html_report/: app___init___py.html  app_api_crud_py.html  app_api_ping_py.html  app_api_users_py.html  app_config_py.html  app_db_py.html  app_main_py.html  app_models___init___py.html  app_models_pydantic_py.html  app_models_tortoise_py.html  index.html  status.json
project/db/: Dockerfile.prod
project/htmlcov/: app___init___py.html  app_api_crud_py.html  app_api_ping_py.html  app_api_users_py.html  app_config_py.html  app_db_py.html  app_main_py.html  app_models___init___py.html  app_models_pydantic_py.html  app_models_tortoise_py.html  index.html  status.json
project/migrations/models/: 0_20210509113158_init.sql  0_20210808190728_init.sql  1_20210808190814_update.sql  2_20210808190845_update.sql
project/scripts/: manage.py
project/tests/: conftest.py  test_auth.py  test_manage.py  test_ping.py  test_users.py  test_users_unit.py
