[tool.poetry]
name = "project"
version = "0.1.0"
description = ""
authors = ["Falk <gammalget@gmail.com>"]
license = "GPL"

[tool.poetry.dependencies]
fastapi = "^0.66.0"
uvicorn = "^0.14.0"
asyncpg = "^0.23.0"
tortoise-orm = "^0.17.5"
aerich = "^0.5.4"
gunicorn = "^20.1.0"
uvloop = "^0.15.2"
httptools = "^0.2.0"
flake8 = "^3.9.2"

[tool.poetry.dev-dependencies]
flake8 = "^3.9.2"
pytest = "^6.2.4"
isort = "^5.8.0"
black = "^21.5b0"
pytest-cov = "^2.11.1"
httpx = "^0.18.1"
requests = "^2.25.1"
pytest-xdist = "^2.2.1"
coverage-badge = "^1.0.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
