[tool.poetry]
name = "project"
version = "0.1.0"
description = ""
authors = ["Falk <gammalget@gmail.com>"]
license = "GPL"

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.70.0"
uvicorn = "^0.15.0"
asyncpg = "^0.24.0"
tortoise-orm = "0.17.7"
aerich = "^0.5.4"
gunicorn = "^20.1.0"
uvloop = "^0.16.0"
httptools = "^0.3.0"
python-multipart = "^0.0.5"
python-jose = "^3.3.0"
passlib = {version = "^1.7.4", extras = ["bcrypt"]}
pydantic = {version = "^1.8.2", extras = ["email"]}
click = "^8.0.3"

[tool.poetry.dev-dependencies]
flake8 = "^4.0.1"
pytest = "^6.2.5"
isort = "^5.9.3"
black = "^21.9b0"
pytest-cov = "^3.0.0"
httpx = "^0.20.0"
requests = "^2.26.0"
pytest-xdist = "^2.4.0"
codecov = "^2.1.12"
pytest-asyncio = "^0.16.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
